--- a/Pages/fragancias.html
+++ b/Pages/fragancias.html
@@ -6,17 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Parfum</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header class="encabezado">
-        <a href="../index.html"><img class="logoparfum" src="../Images/Logo/logoparfum.png" alt="Logo"></a> 
-        <a href="../index.html"><h1>LE PARFUM</h1></a> 
+        <a href="../index.html"><img class="logoparfum" src="../Images/Logo/logoparfum.png" alt="Logo"></a>
+        <a href="../index.html">
+            <h1>LE PARFUM</h1>
+        </a>
         <div class="redes">
             <a href="https://www.instagram.com/" target=_blank><i class="bi bi-instagram"></i></a>
             <a href="https://www.facebook.com/" target=_blank><i class="bi bi-facebook"></i></a>
@@ -24,18 +29,132 @@
         </div>
         <nav>
             <ul type="none">
-               <a href=""><li>FRAGANCIAS</li></a> 
-               <a href=""> <li>MAQUILLAJES</li></a> 
-               <a href=""><li>CUIDADO PERSONAL</li></a>
-               <a href=""><li>REGALERIA</li></a>
-               <a href=""><li>PELUQUERIA</li></a>
-               <a href=""><li>HIGIENE</li></a>
-               <a href=""><li>MARCAS</li></a>
+                <a href="">
+                    <li>FRAGANCIAS</li>
+                </a>
+                <a href="">
+                    <li>MAQUILLAJES</li>
+                </a>
+                <a href="">
+                    <li>CUIDADO PERSONAL</li>
+                </a>
+                <a href="">
+                    <li>REGALERIA</li>
+                </a>
+                <a href="">
+                    <li>PELUQUERIA</li>
+                </a>
+                <a href="">
+                    <li>HIGIENE</li>
+                </a>
+                <a href="">
+                    <li>MARCAS</li>
+                </a>
             </ul>
         </nav>
     </header>
-    <main>
-       
+    <main class="main-fragancias">
+        <h2>Fragancias Femeninas</h2>
+        <div class="grilla-perfumes-femeninos">
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/ibiza.jpg" alt="Ibiza">
+                <p class="descripcion"> Pacha Ibiza 24/7 For Her es una fragancia femenina que evoca la energía y el
+                    espíritu vibrante de
+                    los mejores días del verano en Ibiza. Este perfume es elegante y femenino, ideal para quienes desean
+                    destacar y vivir momentos espectaculares.
+                </p>
+                <p class="precio"> $16.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/olympea.jpg" alt="Olympea">
+                <p class="descripcion">Olympéa es una fragancia femenina de Paco Rabanne, lanzada en 2015, que encarna
+                    la imagen de una
+                    diosa moderna: poderosa, seductora y con una presencia magnética. Esta Eau de Parfum combina notas
+                    orientales y florales para crear un aroma distintivo y cautivador</p>
+                <p class="precio"> $210.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/shakira.jpg" alt="Shakira">
+                <p class="descripcion">Fragancia femenina inspirada en el amor por la danza y la sensualidad de
+                    movimientos. Es un perfume
+                    vibrante, juvenil y seductor, ideal para mujeres espontáneas, carismáticas y con espíritu libre. El
+                    frasco simula la silueta de Shakira.</p>
+                <p class="precio"> $33.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/elizabeth arden.jpg" alt="Elizabeth Arden">
+                <p class="descripcion">Inspirada en la famosa Quinta Avenida de Nueva York, esta fragancia floral
+                    refleja la elegancia y
+                    sofisticación de la mujer moderna.</p>
+                <p class="precio"> $165.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/versace.jpg" alt="Versace">
+                <p class="descripcion">Versace Woman es una fragancia femenina, lanzada en el año 2000. Esta pertenece a
+                    la familia
+                    olfativa floral y se caracteriza por una combinación armoniosa de notas florales, frutales y
+                    amaderadas, ofreciendo una experiencia olfativa sofisticada</p>
+                <p class="precio"> $100.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/zapato.jpg" alt="Carolina Herrera">
+                <p class="descripcion">Fragancia femenina de Carolina Herrera, lanzada en 2021, que ofrece una
+                    interpretación audaz y
+                    moderna del icónico perfume Good Girl. Esta Eau de Parfum pertenece a la familia olfativa Floral
+                    Frutal y está diseñada para mujeres divertidas, fabulosas y atrevidas.</p>
+                <p class="precio"> $180.000 </p>
+            </div>
+        </div>
+        <h2> Fragancias Masculinas</h2>
+        <div class="grilla-perfumes-masculinos">
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/badboy.jpg" alt="Bad Boy">
+                <p class="descripcion">Fragancia masculina de Carolina Herrera lanzada en 2019, que representa la
+                    dualidad del hombre
+                    moderno: fuerte y sensible, seguro y relajado.</p>
+                <p class="precio"> $165.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/ckh.jpg" alt="Clavin Klein INU2">
+                <p class="descripcion">Calvin Klein CK IN2U es una fragancia juvenil y fresca, diseñada para la
+                    generación que vive el
+                    momento y disfruta de la espontaneidad. Esta línea incluye versiones para mujer (CK IN2U for Her) y
+                    para hombre (CK IN2U for Him)</p>
+                <p class="precio"> $105.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/be.jpg" alt="Clavin Klein BE">
+                <p class="descripcion"> Fragancia lanzada en 1996, diseñada para celebrar la individualidad y la
+                    autoexpresión. Este Eau de
+                    Toilette pertenece a la familia olfativa Almizcle Floral Amaderado y se caracteriza por su aroma
+                    limpio y fresco, ideal para el uso diario.</p>
+                <p class="precio"> $98.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/pacorobot.jpg" alt="Paco Rabbane">
+                <p class="descripcion"> Fragancia masculina de Paco Rabanne que encarna la confianza y la energía
+                    positiva. Esta innovadora
+                    Eau de Toilette fusiona la artesanía de lujo con la tecnología moderna, presentando un frasco de
+                    diseño vanguardista con forma de robot que <span>incluye un chip NFC en su versión de 100 ml</span>
+                    , permitiendo acceder a contenido exclusivo al acercar un smartphone.</p>
+                <p class="precio"> $170.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/pepej.jpg" alt="Pepe Jeans">
+                <p class="descripcion">Esta fragancia masculina es una mezcla elegante y audaz de notas cítricas y
+                    orientales. El perfume se
+                    presenta en un frasco con forma de copa de cóctel verde, reflejando su carácter lúdico y masculino
+                </p>
+                <p class="precio"> $105.000 </p>
+            </div>
+            <div class="perfumes">
+                <img class="img-perfumes" src="../Images/Fragancias/tomynow.jpg" alt="Tomy Now">
+                <p class="descripcion"> Fragancia masculina de Tommy Hilfiger, lanzada en 2018. Este Eau de Toilette
+                    pertenece a la familia
+                    olfativa Amaderada Especiada y está diseñado para hombres modernos y dinámicos.</p>
+                <p class="precio"> $70.000 </p>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="nosotros">
@@ -46,16 +165,29 @@
         </div>
         <div class="contacto">
             <a class="ntitulos" href="..//Pages/contacto.html">Contacto</a>
-            <i class="bi bi-whatsapp"></i><p>2235464059</p>
-            <i class="bi bi-envelope-fill"></i><p>leparfum@gmail.com</p>
-            <i class="bi bi-geo-alt-fill"></i><p>Patagones 226</p>
+            <i class="bi bi-whatsapp"></i>
+            <p>2235464059</p>
+            <i class="bi bi-envelope-fill"></i>
+            <p>leparfum@gmail.com</p>
+            <i class="bi bi-geo-alt-fill"></i>
+            <p>Patagones 226</p>
         </div>
         <div class="mapa">
-            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d786.2648993796747!2d-57.55137282203243!3d-37.975738451416944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dbe1756b67d7%3A0xcd8f2087405c518e!2sLe%20Parfum!5e0!3m2!1ses!2sar!4v1740750296180!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="mapa"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d786.2648993796747!2d-57.55137282203243!3d-37.975738451416944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dbe1756b67d7%3A0xcd8f2087405c518e!2sLe%20Parfum!5e0!3m2!1ses!2sar!4v1740750296180!5m2!1ses!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="derechos">
             <p>COPYRIGHT LEPARFUM - 2025. TODOS LOS DERECHOS RESERVADOS</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js"
+        integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
