--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Parfum</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,31 +27,39 @@
             <a href="https://www.facebook.com/" target=_blank><i class="bi bi-facebook"></i></a>
             <a href="https://web.whatsapp.com/" target=_blank><i class="bi bi-whatsapp"></i></a>
         </div>
-        <nav>
-            <ul type="none">
-                <a href="../Proyecto Desarrollo Web/Pages/fragancias.html">
-                    <li>FRAGANCIAS</li>
-                </a>
-                <a href="..//Proyecto Desarrollo Web/Pages/maquillajes.html">
-                    <li>MAQUILLAJES</li>
-                </a>
-                <a href="..//Proyecto Desarrollo Web/Pages/cuidado-personal.html">
-                    <li>CUIDADO PERSONAL</li>
-                </a>
-                <a href="..//Proyecto Desarrollo Web/Pages/regaleria.html">
-                    <li>REGALERIA</li>
-                </a>
-                <a href="..//Proyecto Desarrollo Web/Pages/peluqueria.html">
-                    <li>PELUQUERIA</li>
-                </a>
-                <a href="..//Proyecto Desarrollo Web/Pages/higiene.html">
-                    <li>HIGIENE</li>
-                </a>
-                <a href="..//Proyecto Desarrollo Web/Pages/marcas.html">
-                    <li>MARCAS</li>
-                </a>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../Proyecto Desarrollo Web/Pages/fragancias.html">Fragancias</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="..//Proyecto Desarrollo Web/Pages/maquillajes.html">Maquillajes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="..//Proyecto Desarrollo Web/Pages/cuidado-personal.html">Cuidado Personal</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="..//Proyecto Desarrollo Web/Pages/regaleria.html">Regaleria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="..//Proyecto Desarrollo Web/Pages/peluqueria.html">Peluqueria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="..//Proyecto Desarrollo Web/Pages/higiene.html">Higiene</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <main>
@@ -130,21 +139,27 @@
 
         <section class="descuentos">
             <h2>MEDIOS DE PAGO Y DESCUENTO</h2>
-            <div class="descuentos-flex">
-                <article class="d1">
-                    <img class="img-medios" src="Images/Medios/cunetadni.jpg" alt="Cuenta DNI">
-                </article>
-                <article class="d2">
-                    <img class="img-medios" src="Images/Medios/bna-1.jpg" alt="Banco Nacion">
-                </article>
-                <article class="d3">
-                    <img class="img-medios" src="Images/Medios/mercadopago.png" alt="Mercado Pago">
-                </article>
-                <article class="d4">
-                    <img class="img-medios" src="Images/Medios/efectivo.jpg" alt="Descuentos en Efectivo">
-                </article>
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="Images/Medios/cunetadni.jpg" class="d-block w-100" alt="Cuenta DNI">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="Images/Medios/bna-1.jpg" class="d-block w-100" alt="Banco Nacion">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="Images/Medios/mercadopago.png" class="d-block w-100" alt="Mercado Pago">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="Images/Medios/efectivo.jpg" class="d-block w-100" alt="Descuentos en Efectivo">
+                  </div>
+                </div>  
+            </div>
+            <div class="video">
+                <video class="v1" src="./Video/le parfum.mp4" autoplay muted loop></video>
             </div>
         </section>
+        
     </main>
 
     <footer>
@@ -156,9 +171,9 @@
         </div>
         <div class="contacto">
             <a class="ntitulos" href="..//Proyecto Desarrollo Web/Pages/contacto.html">Contacto</a>
-            <p class="pc">2235464059 <i class="bi bi-whatsapp"></i></p>   
-            <p class="pc">leparfum@gmail.com <i class="bi bi-envelope-fill"></i></p> 
-            <p class="pc">Patagones 226 <i class="bi bi-geo-alt-fill"></i></p>   
+            <p class="pc">2235464059 <i class="bi bi-whatsapp"></i></p>
+            <p class="pc">leparfum@gmail.com <i class="bi bi-envelope-fill"></i></p>
+            <p class="pc">Patagones 226 <i class="bi bi-geo-alt-fill"></i></p>
         </div>
         <div class="maps">
             <iframe class="mapa"
@@ -170,5 +185,12 @@
             <p>COPYRIGHT LEPARFUM - 2025. TODOS LOS DERECHOS RESERVADOS</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js"
+        integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
