--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>LE PARFUM</h1>
         </a>
         <div class="redes">
-            <a href="https://www.instagram.com/" target=_blank><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/le.parfuum/" target=_blank><i class="bi bi-instagram"></i></a>
             <a href="https://www.facebook.com/" target=_blank><i class="bi bi-facebook"></i></a>
             <a href="https://web.whatsapp.com/" target=_blank><i class="bi bi-whatsapp"></i></a>
         </div>
@@ -36,7 +36,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../Proyecto Desarrollo Web/Pages/fragancias.html">Fragancias</a>
@@ -181,6 +181,7 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        <a href="https://web.whatsapp.com/" target="_blank" alt="Icono Wts"> <img class="iconowts" src="./Images/Iconowts/wts.png" alt=""></a>
         <div class="derechos">
             <p>COPYRIGHT LEPARFUM - 2025. TODOS LOS DERECHOS RESERVADOS</p>
         </div>
