--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -18,41 +18,50 @@
 
 <body>
     <header class="encabezado">
-        <a href="../index.html"><img class="logoparfum" src="../Images/Logo/logoparfum.png" alt="Logo"></a>
+        <a class="logo" href="../index.html"><img class="logoparfum" src="../Images/Logo/logoparfum.png" alt="Logo"></a>
         <a href="../index.html">
             <h1>LE PARFUM</h1>
         </a>
         <div class="redes">
-            <a href="https://www.instagram.com/" target=_blank><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/le.parfuum/" target=_blank><i class="bi bi-instagram"></i></a>
             <a href="https://www.facebook.com/" target=_blank><i class="bi bi-facebook"></i></a>
             <a href="https://web.whatsapp.com/" target=_blank><i class="bi bi-whatsapp"></i></a>
         </div>
-        <nav>
-            <ul type="none">
-                <a href="">
-                    <li>FRAGANCIAS</li>
-                </a>
-                <a href="">
-                    <li>MAQUILLAJES</li>
-                </a>
-                <a href="">
-                    <li>CUIDADO PERSONAL</li>
-                </a>
-                <a href="">
-                    <li>REGALERIA</li>
-                </a>
-                <a href="">
-                    <li>PELUQUERIA</li>
-                </a>
-                <a href="">
-                    <li>HIGIENE</li>
-                </a>
-                <a href="">
-                    <li>MARCAS</li>
-                </a>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./fragancias.html">Fragancias</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./maquillajes.html">Maquillajes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../cuidado-personal.html">Cuidado Personal</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./regaleria.html">Regaleria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./peluqueria.html">Peluqueria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./higiene.html">Higiene</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
+    
     <main>
         <section class="formulario">
             <h2>Contactenos</h2>
@@ -86,20 +95,18 @@
             <a href="">Politica de Privacidad</a>
         </div>
         <div class="contacto">
-            <a class="ntitulos" href="..//Pages/contacto.html">Contacto</a>
-            <i class="bi bi-whatsapp"></i>
-            <p>2235464059</p>
-            <i class="bi bi-envelope-fill"></i>
-            <p>leparfum@gmail.com</p>
-            <i class="bi bi-geo-alt-fill"></i>
-            <p>Patagones 226</p>
-        </div>
+          <a class="ntitulos" href="..//Pages/contacto.html">Contacto</a>
+          <p class="pc">2235464059 <i class="bi bi-whatsapp"></i></p>
+          <p class="pc">leparfum@gmail.com <i class="bi bi-envelope-fill"></i></p>
+          <p class="pc">Patagones 226 <i class="bi bi-geo-alt-fill"></i></p>
+      </div>
         <div class="mapa">
             <iframe class="mapa"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d786.2648993796747!2d-57.55137282203243!3d-37.975738451416944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dbe1756b67d7%3A0xcd8f2087405c518e!2sLe%20Parfum!5e0!3m2!1ses!2sar!4v1740750296180!5m2!1ses!2sar"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        <a href="https://web.whatsapp.com/" target="_blank" alt="Icono Wts"> <img class="iconowts" src="../Images/Iconowts/wts.png" alt=""></a>
         <div class="derechos">
             <p>COPYRIGHT LEPARFUM - 2025. TODOS LOS DERECHOS RESERVADOS</p>
         </div>
