--- a/Pages/fragancias.html
+++ b/Pages/fragancias.html
@@ -18,40 +18,48 @@
 
 <body>
     <header class="encabezado">
-        <a href="../index.html"><img class="logoparfum" src="../Images/Logo/logoparfum.png" alt="Logo"></a>
+        <a class="logo" href="../index.html"><img class="logoparfum" src="../Images/Logo/logoparfum.png" alt="Logo"></a>
         <a href="../index.html">
             <h1>LE PARFUM</h1>
         </a>
         <div class="redes">
-            <a href="https://www.instagram.com/" target=_blank><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/le.parfuum/" target=_blank><i class="bi bi-instagram"></i></a>
             <a href="https://www.facebook.com/" target=_blank><i class="bi bi-facebook"></i></a>
             <a href="https://web.whatsapp.com/" target=_blank><i class="bi bi-whatsapp"></i></a>
         </div>
-        <nav>
-            <ul type="none">
-                <a href="">
-                    <li>FRAGANCIAS</li>
-                </a>
-                <a href="">
-                    <li>MAQUILLAJES</li>
-                </a>
-                <a href="">
-                    <li>CUIDADO PERSONAL</li>
-                </a>
-                <a href="">
-                    <li>REGALERIA</li>
-                </a>
-                <a href="">
-                    <li>PELUQUERIA</li>
-                </a>
-                <a href="">
-                    <li>HIGIENE</li>
-                </a>
-                <a href="">
-                    <li>MARCAS</li>
-                </a>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./fragancias.html">Fragancias</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./maquillajes.html">Maquillajes</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./cuidado-personal.html">Cuidado Personal</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./regaleria.html">Regaleria</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./peluqueria.html">Peluqueria</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./higiene.html">Higiene</a>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main class="main-fragancias">
         <h2>Fragancias Femeninas</h2>
@@ -105,7 +113,7 @@
                 <p class="precio"> $180.000 </p>
             </div>
         </div>
-        <h2> Fragancias Masculinas</h2>
+        <h2 class="frag-masc"> Fragancias Masculinas</h2>
         <div class="grilla-perfumes-masculinos">
             <div class="perfumes">
                 <img class="img-perfumes" src="../Images/Fragancias/badboy.jpg" alt="Bad Boy">
@@ -165,12 +173,9 @@
         </div>
         <div class="contacto">
             <a class="ntitulos" href="..//Pages/contacto.html">Contacto</a>
-            <i class="bi bi-whatsapp"></i>
-            <p>2235464059</p>
-            <i class="bi bi-envelope-fill"></i>
-            <p>leparfum@gmail.com</p>
-            <i class="bi bi-geo-alt-fill"></i>
-            <p>Patagones 226</p>
+            <p class="pc">2235464059 <i class="bi bi-whatsapp"></i></p>
+            <p class="pc">leparfum@gmail.com <i class="bi bi-envelope-fill"></i></p>
+            <p class="pc">Patagones 226 <i class="bi bi-geo-alt-fill"></i></p>
         </div>
         <div class="mapa">
             <iframe class="mapa"
@@ -178,6 +183,7 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        <a href="https://web.whatsapp.com/" target="_blank" alt="Icono Wts"> <img class="iconowts" src="../Images/Iconowts/wts.png" alt=""></a>
         <div class="derechos">
             <p>COPYRIGHT LEPARFUM - 2025. TODOS LOS DERECHOS RESERVADOS</p>
         </div>
