--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Pages/fragancias.html">Fragancias</a>
+                    <a class="nav-link" href="Pages/fragancias.html">Fragancias</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Pages/maquillajes.html">Maquillajes</a>
+                    <a class="nav-link" href="Pages/maquillajes.html">Maquillajes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Pages/cuidado-personal.html">Cuidado Personal</a>
+                    <a class="nav-link" href="Pages/cuidado-personal.html">Cuidado Personal</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Pages/regaleria.html">Regaleria</a>
+                    <a class="nav-link" href="Pages/regaleria.html">Regaleria</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Pages/peluqueria.html">Peluqueria</a>
+                    <a class="nav-link" href="Pages/peluqueria.html">Peluqueria</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Pages/higiene.html">Higiene</a>
+                    <a class="nav-link" href="Pages/higiene.html">Higiene</a>
                   </li>
                 </ul>
               </div>
