--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/fragancias.html">Fragancias</a>
+                    <a class="nav-link" href="./pages/fragancias.html">Fragancias</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/maquillajes.html">Maquillajes</a>
+                    <a class="nav-link" href="./pages/maquillajes.html">Maquillajes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/cuidado-personal.html">Cuidado Personal</a>
+                    <a class="nav-link" href="./pages/cuidado-personal.html">Cuidado Personal</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/regaleria.html">Regaleria</a>
+                    <a class="nav-link" href="./pages/regaleria.html">Regaleria</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/peluqueria.html">Peluqueria</a>
+                    <a class="nav-link" href="./pages/peluqueria.html">Peluqueria</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/higiene.html">Higiene</a>
+                    <a class="nav-link" href="./pages/higiene.html">Higiene</a>
                   </li>
                 </ul>
               </div>
@@ -164,13 +164,13 @@
 
     <footer>
         <div class="nosotros">
-            <a class="ntitulos" href="..//Proyecto Desarrollo Web/Pages/sobre-nosotros.html">Nosotros</a>
+            <a class="ntitulos" href="./Pages/sobre-nosotros.html">Nosotros</a>
             <a href="">Politica de Cambios</a>
             <a href="">Terminos y condiciones</a>
             <a href="">Politica de Privacidad</a>
         </div>
         <div class="contacto">
-            <a class="ntitulos" href="..//Proyecto Desarrollo Web/Pages/contacto.html">Contacto</a>
+            <a class="ntitulos" href="./Pages/contacto.html">Contacto</a>
             <p class="pc">2235464059 <i class="bi bi-whatsapp"></i></p>
             <p class="pc">leparfum@gmail.com <i class="bi bi-envelope-fill"></i></p>
             <p class="pc">Patagones 226 <i class="bi bi-geo-alt-fill"></i></p>
