--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="./maquillajes.html">Maquillajes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../cuidado-personal.html">Cuidado Personal</a>
+                    <a class="nav-link" href="./cuidado-personal.html">Cuidado Personal</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./regaleria.html">Regaleria</a>
@@ -91,13 +91,13 @@
     </main>
     <footer>
         <div class="nosotros">
-            <a class="ntitulos" href="..//Pages/sobre-nosotros.html">Nosotros</a>
+            <a class="ntitulos" href="./sobre-nosotros.html">Nosotros</a>
             <a href="">Politica de Cambios</a>
             <a href="">Terminos y condiciones</a>
             <a href="">Politica de Privacidad</a>
         </div>
         <div class="contacto">
-          <a class="ntitulos" href="..//Pages/contacto.html">Contacto</a>
+          <a class="ntitulos" href="./contacto.html">Contacto</a>
           <p class="pc">2235464059 <i class="bi bi-whatsapp"></i></p>
           <p class="pc">leparfum@gmail.com <i class="bi bi-envelope-fill"></i></p>
           <p class="pc">Patagones 226 <i class="bi bi-geo-alt-fill"></i></p>
